Finalized port
Finalized the port to 1.18.2.
All models updated to new 1.17+ syntax, wing model status moved to WingItemCapability, flapping sounds moved to client code, and many bugs discovered that I need to fix in other versions.