@@ -6,29 +6,33 @@ import me.appw.vikare.core.crafting.ShinyWingsRecipe;
 import me.appw.vikare.core.registry.RecipeSerializers;
 import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
-import mezz.jei.api.MethodsReturnNonnullByDefault;
-import mezz.jei.api.constants.VanillaRecipeCategoryUid;
+import mezz.jei.api.constants.RecipeTypes;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
+import mezz.jei.api.gui.ingredient.ICraftingGridHelper;
 import mezz.jei.api.recipe.IFocus;
-import mezz.jei.api.recipe.category.extensions.vanilla.crafting.ICustomCraftingCategoryExtension;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
+import mezz.jei.api.recipe.category.extensions.vanilla.crafting.ICraftingCategoryExtension;
+import mezz.jei.api.recipe.vanilla.IJeiAnvilRecipe;
 import mezz.jei.api.registration.IRecipeRegistration;
 import mezz.jei.api.registration.IVanillaCategoryExtensionRegistration;
-import net.minecraft.world.item.ItemStack;
+import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraftforge.common.util.Size2i;
+import net.minecraft.world.item.ItemStack;
 import net.minecraftforge.registries.ForgeRegistries;
+import org.jetbrains.annotations.Nullable;
 
+import javax.annotation.ParametersAreNonnullByDefault;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import static me.appw.vikare.core.registry.Items.WINGS;
 
 @JeiPlugin()
+@ParametersAreNonnullByDefault
 @MethodsReturnNonnullByDefault
 public class JustEnoughItems implements IModPlugin {
 
@@ -44,7 +48,7 @@ public class JustEnoughItems implements IModPlugin {
 
     @Override
     public void registerRecipes(IRecipeRegistration registration) {
-        List<Object> anvilRecipes = new ArrayList<>();
+        List<IJeiAnvilRecipe> anvilRecipes = new ArrayList<>();
         WINGS.getEntries().forEach(rItem -> {
             WingItem item = (WingItem) rItem.get();
             ItemStack damaged1 = new ItemStack(item);
@@ -57,58 +61,68 @@ public class JustEnoughItems implements IModPlugin {
             List<ItemStack> repairMaterials = item.getRepairItemStacks();
 
             if (!repairMaterials.isEmpty()) {
-                Object repairWithMaterial = registration.getVanillaRecipeFactory().createAnvilRecipe(damaged1, repairMaterials, Collections.singletonList(damaged2));
+                IJeiAnvilRecipe repairWithMaterial = registration.getVanillaRecipeFactory().createAnvilRecipe(damaged1, repairMaterials, List.of(damaged2));
                 anvilRecipes.add(repairWithMaterial);
             }
-            Object repairWithSame = registration.getVanillaRecipeFactory().createAnvilRecipe(damaged2, Collections.singletonList(damaged2), Collections.singletonList(damaged3));
+            IJeiAnvilRecipe repairWithSame = registration.getVanillaRecipeFactory().createAnvilRecipe(damaged2, List.of(damaged2), List.of(damaged3));
             anvilRecipes.add(repairWithSame);
         });
 
-        registration.addRecipes(anvilRecipes, VanillaRecipeCategoryUid.ANVIL);
+        registration.addRecipes(RecipeTypes.ANVIL, anvilRecipes);
     }
 
-    public static class ShinyRecipeVanillaExtension implements ICustomCraftingCategoryExtension {
+    public static class ShinyRecipeVanillaExtension implements ICraftingCategoryExtension {
 
         public ShinyRecipeVanillaExtension(ShinyWingsRecipe recipe) {
         }
 
-        @Override
-        public void setRecipe(IRecipeLayout recipeLayout, IIngredients ingredients) {
-            IFocus<ItemStack> focus = recipeLayout.getFocus(VanillaTypes.ITEM);
-            ItemStack stack = focus.getValue().copy();
-            if (!stack.isEnchanted()) return;
-            ItemStack outStack = stack.copy();
-
-            ItemStack invertDull = focus.getMode() == IFocus.Mode.OUTPUT ? stack : outStack;
-            invertDull.getOrCreateTag().putBoolean("Dull", !invertDull.getOrCreateTag().getBoolean("Dull"));
-
-            recipeLayout.getIngredientsGroup(VanillaTypes.ITEM).set(1, stack);
-            recipeLayout.getIngredientsGroup(VanillaTypes.ITEM).set(2, ForgeRegistries.ITEMS.tags().getTag(ShinyWingsRecipe.SHINE).stream().map(ItemStack::new).collect(Collectors.toList()));
-            recipeLayout.getIngredientsGroup(VanillaTypes.ITEM).set(0, outStack);
+        private List<ItemStack> getShinies() {
+            return ForgeRegistries.ITEMS.tags().getTag(ShinyWingsRecipe.SHINE).stream().map(ItemStack::new).collect(Collectors.toList());
         }
 
         @Override
-        public void setIngredients(IIngredients ingredients) {
-            List<ItemStack> inputs = new ArrayList<>();
-            List<ItemStack> outputs = new ArrayList<>();
+        public void setRecipe(IRecipeLayoutBuilder builder, ICraftingGridHelper craftingGridHelper, IFocusGroup focuses) {
+            if (focuses.isEmpty()) {
+                List<ItemStack> inputs = new ArrayList<>();
+                List<ItemStack> outputs = new ArrayList<>();
 
-            WINGS.getEntries().forEach(item -> {
-                inputs.add(new ItemStack(item.get()));
-                outputs.add(new ItemStack(item.get()));
-            });
+                WINGS.getEntries().forEach(item -> {
+                    inputs.add(new ItemStack(item.get()));
+                    outputs.add(new ItemStack(item.get()));
+                });
 
-            ingredients.setOutputs(VanillaTypes.ITEM, outputs);
-            ingredients.setInputLists(VanillaTypes.ITEM, Arrays.asList(ForgeRegistries.ITEMS.tags().getTag(ShinyWingsRecipe.SHINE).stream().map(ItemStack::new).collect(Collectors.toList()), inputs));
+                craftingGridHelper.setInputs(builder, VanillaTypes.ITEM_STACK, Arrays.asList(getShinies(), inputs), 0, 0);
+                craftingGridHelper.setOutputs(builder, VanillaTypes.ITEM_STACK, outputs);
+            } else {
+                IFocus<ItemStack> stackFocus = focuses.getFocuses(VanillaTypes.ITEM_STACK).toList().get(0);
+                ItemStack stack = stackFocus.getTypedValue().getIngredient();
+
+                if (stack.is(ShinyWingsRecipe.SHINE)) {
+                    List<ItemStack> inputs = new ArrayList<>();  // TODO: backport this, in old versions there is an empty JEI recipe
+                    List<ItemStack> outputs = new ArrayList<>();
+
+                    WINGS.getEntries().forEach(item -> {
+                        inputs.add(new ItemStack(item.get()));
+                        outputs.add(new ItemStack(item.get()));
+                    });
+
+                    craftingGridHelper.setInputs(builder, VanillaTypes.ITEM_STACK, Arrays.asList(inputs, getShinies()), 0, 0);
+                    craftingGridHelper.setOutputs(builder, VanillaTypes.ITEM_STACK, outputs);
+                } else {
+                    ItemStack outStack = stack.copy();
+
+                    ItemStack invertDull = stackFocus.getRole() == RecipeIngredientRole.OUTPUT ? stack : outStack;
+                    invertDull.getOrCreateTag().putBoolean("Dull", !invertDull.getOrCreateTag().getBoolean("Dull"));
+
+                    craftingGridHelper.setInputs(builder, VanillaTypes.ITEM_STACK, Arrays.asList(List.of(stack), getShinies()), 0, 0);
+                    craftingGridHelper.setOutputs(builder, VanillaTypes.ITEM_STACK, List.of(outStack));
+                }
+            }
         }
 
         @Override
-        public ResourceLocation getRegistryName() {
+        public @Nullable ResourceLocation getRegistryName() {
             return RecipeSerializers.SHINY_WINGS.getId();
-        }
-
-        @Override
-        public Size2i getSize() {
-            return new Size2i(2, 1);
         }
     }
 }
